[package]
name = "subwayui"
version = "0.1.0"
edition = "2021"

[lib]
name = "subwayui"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "showcase"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.92"
gloo-utils = "0.2"
gloo-events = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["HtmlElement", "Document", "Element", "Node", "DomRect"] }
log = "0.4"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["static-css"]
# Inject the bundled Metro CSS at runtime via a <style> tag
static-css = []
animations = []

[package.metadata.docs]
readme = "README.md"